# scriptpnp

./: README.md  buildingSteps.txt
.github/: FUNDING.yml
common/: commandlist.cpp  commandlist.h  commands.cpp  commands.h  config.h  log.h  machinelimits.cpp  machinelimits.h  overrides.cpp  overrides.h  packable.h  pnpMessages.cpp  pnpMessages.h
common/scv/: planner.cpp  planner.h  vec3.h
pnpClient/: README.md  clientBuildSteps.txt
pnpClient/run/: base.mtl  gantry.mtl  nozzle.mtl  nozzleTip.mtl  test.pnps  xcarriage.mtl  zcarriage.mtl
pnpClient/src/: CMakeLists.txt  TextEditor.cpp  TextEditor.h  camera.h  codeEditorDocument.cpp  codeEditorDocument.h  codeEditorPalettes.cpp  codeEditorPalettes.h  codeEditorWindow.cpp  codeEditorWindow.h  commandEditorWindow.cpp  commandEditorWindow.h  commandlist_parse.cpp  commandlist_parse.h  compilestatus.cpp  compilestatus.h  custompanel.cpp  custompanel.h  db.cpp  db.h  duplicatetableview.cpp  duplicatetableview.h  eventhooks.cpp  eventhooks.h  feedback.cpp  feedback.h  image.cpp  image.h  jsoncpp.cpp  log_client.cpp  main.cpp  matrix.h  model.cpp  model.h  net_requester.cpp  net_requester.h  net_subscriber.cpp  net_subscriber.h  notify.cpp  notify.h  (+53 more)
pnpClient/src/imgui_notify/: imgui_notify.h
pnpClient/src/script/: api.cpp  api.h  engine.cpp  engine.h
pnpServer/: Makefile  README.md  RTThread.cpp  RTThread.h  bcm2835.cpp  bcm2835.h  bcm2835Init.cpp  bcm2835Init.h  config.cpp  estop.cpp  estop.h  homing.cpp  homing.h  interThread.cpp  interThread.h  loadcell.cpp  loadcell.h  log.h  log_server.cpp  main.cpp  motionGlobals.cpp  motionGlobals.h  movingAverage.h  probing.cpp  probing.h  rp1lib.c  rpispi.cpp  server.cpp  server.h  socketMonitor.cpp  socketMonitor.h  spi-dw.c  spi-dw.h  version.h  weeny.cpp  weeny.h
realtime/: rpi5rt.txt
